# Receipt-Photo-to-Expense-Entry

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
docs/: architecture.md
src/receipt_expense/: __init__.py  app.py  config.py  extractor.py  image_prep.py  models.py  storage.py  validator.py
src/receipt_expense/static/: index.html
tests/: test_api.py  test_image_prep.py  test_storage.py  test_validator.py
