[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-expense"
version = "0.1.0"
description = "Snap a photo of a receipt; Claude vision extracts vendor/amount/date/category and appends it to your Excel expense sheet."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pillow>=10.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
receipt_expense = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
